# ember

./: .gitignore  LICENSE.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  style.yml
docs/: api.md  cli.md  index.md
docs/core/: callbacks.md  data.md  embermodel.md  runners.md  tracking.md
docs/examples/: custom-loops.md  mnist-vae.md
docs/getting-started/: installation.md  quickstart.md
docs/utils/: instantiation.md  training-helpers.md
ember/: __init__.py  callbacks.py  cli.py  data.py  mnist.py  run.py  schedulers.py  tracking.py
ember/models/: __init__.py  embermodel.py
ember/utils/: __init__.py  _summary.py  grad.py  imports.py  instantiate.py  weights.py
examples/mnist_vae/: config.yaml  run.py
examples/runner/: README.md  config.yaml  models.py  run.py
